# aiogram_utcpicker

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
aiogram_utcpicker/: __init__.py  utcpicker.py
src/aiogram_utcpicker/: __init__.py
tests/: test_utcpicker.py
