[project]
name = "aiogram-utcpicker"
version = "0.1.5"
description = "An inline tool for selecting valid timezone differences to UTC"
authors = [{ name = "alexanderchainsaw", email = "alexanderkolesov.contact@gmail.com>" },]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
homepage = "https://github.com/alexanderchainsaw/aiogram_utcpicker"

